[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
indicatif = { version = "0.17", features = ["rayon"] }
itertools = "0.12"
rand = "0.8"
rayon = "1.10"
